force-app/main/default/objects/TWIST_Form_Registration_Fields__mdt/TWIST_Form_Registration_Fields__mdt.object-meta.xml
<CustomObject>
    <label>TWIST Form Registration Fields</label>
    <pluralLabel>TWIST Form Registration Fields</pluralLabel>
</CustomObject>