force-app/main/default/objects/TWIST_Form_Registration_Fields__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>birthdate</fullName>
            </value>
            <value>
                <fullName>country</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>emailconfirmation</fullName>
            </value>
            <value>
                <fullName>firstname</fullName>
            </value>
            <value>
                <fullName>firstname2</fullName>
            </value>
            <value>
                <fullName>lastname</fullName>
            </value>
            <value>
                <fullName>lastname2</fullName>
            </value>
            <value>
                <fullName>mobile_phone</fullName>
            </value>
            <value>
                <fullName>mobile_phoneconfirmation</fullName>
            </value>
            <value>
                <fullName>newsletter_agreement</fullName>
            </value>
            <value>
                <fullName>password</fullName>
            </value>
            <value>
                <fullName>passwordconfirmation</fullName>
            </value>
            <value>
                <fullName>privacy_policy</fullName>
            </value>
            <value>
                <fullName>title</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>