force-app/main/default/objects/TWIST_Form_Registration_Fields__mdt/fields/Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Api_Name__c</fullName>
    <description>This field is used in order to define the mapping between the form and the account object</description>
    <inlineHelpText>ApiName of the field in Account object</inlineHelpText>
    <label>Field_Api_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>