force-app/main/default/objects/TWIST_Form_Registration_Fields__mdt/fields/Modes__c.field-meta.xml
<CustomField>
    <fullName>Modes__c</fullName>
    <label>Modes</label>
    <type>TextArea</type>
</CustomField>